# python-opentelemetry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/flask-example/: Dockerfile  README.md  app.py  pyproject.toml
src/baselime/opentelemetry/: __init__.py  baggage.py  distro.py  lambda_instrumentation.py  options.py  resource.py  trace.py  utils.py
